--- a/public/viewgraph.html
+++ b/public/viewgraph.html
@@ -105,7 +105,7 @@
             })
             .then((data) => {
                 if (!data[0]){
-                    const container = document.querySelector('.container'); // Assuming '.container' is the parent div
+                    const container = document.querySelector('.sidebar'); // Assuming '.container' is the parent div
                     const errorDiv = document.createElement('div');
                     errorDiv.innerHTML = `
                         <h1>Error in fetching data</h1>
