--- a/public/viewgraph.html
+++ b/public/viewgraph.html
@@ -118,7 +118,7 @@
             })
             .catch((error) => {
                 console.error('Error fetching data:', error);
-                const container = document.querySelector('.container'); // Assuming '.container' is the parent div
+                const container = document.querySelector('.sidebar'); // Assuming '.container' is the parent div
                 const errorDiv = document.createElement('div');
                 errorDiv.innerHTML = `
                     <h1>Error in fetching data</h1>
